--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  margin-bottom: 100px;
 }
 
 .birthday-card .text {
@@ -126,3 +127,15 @@ body {
 .birthday-card .text .title {
   font-family: "Dancing Script", cursive;
 }
+
+/* Video Player */
+.video-player {
+  margin: 20px auto;
+  width: 90%;
+  max-width: 400px;
+  border: 5px solid #201d1d;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3);
+}
+
